Library/TeamTalk_DLL/TeamTalk.h

    
    typedef WCHAR TTCHAR;
    typedef int TTBOOL;
    typedef char TTCHAR;
    typedef int TTBOOL;
    typedef int INT32;
    typedef long long INT64;
    typedef unsigned int UINT32;
    typedef struct AudioCodec
    {
        Codec nCodec;  
        union
        {
            SpeexCodec speex;
            SpeexVBRCodec speex_vbr;
            OpusCodec opus;
        };
    } AudioCodec;
    typedef struct AudioConfig
    {
        TTBOOL bEnableAGC;
        INT32 nGainLevel;
    } AudioConfig;
    typedef enum StreamType
    {
        STREAMTYPE_NONE                     = 0x00000000,
        STREAMTYPE_VOICE                    = 0x00000001,
        STREAMTYPE_VIDEOCAPTURE             = 0x00000002,
        STREAMTYPE_MEDIAFILE_AUDIO          = 0x00000004,
        STREAMTYPE_MEDIAFILE_VIDEO          = 0x00000008,
        STREAMTYPE_DESKTOP                  = 0x00000010,
        STREAMTYPE_DESKTOPINPUT             = 0x00000020,
        STREAMTYPE_MEDIAFILE                = STREAMTYPE_MEDIAFILE_AUDIO |
                                              STREAMTYPE_MEDIAFILE_VIDEO,
        STREAMTYPE_CLASSROOM_ALL            = STREAMTYPE_VOICE |
                                              STREAMTYPE_VIDEOCAPTURE |
                                              STREAMTYPE_DESKTOP |
                                              STREAMTYPE_MEDIAFILE,
    } StreamType;
    typedef enum UserRight
    {
        USERRIGHT_NONE                      = 0x00000000, 
        USERRIGHT_MULTI_LOGIN               = 0x00000001,
        USERRIGHT_VIEW_ALL_USERS            = 0x00000002,
        USERRIGHT_CREATE_TEMPORARY_CHANNEL  = 0x00000004,
        USERRIGHT_MODIFY_CHANNELS           = 0x00000008,
        USERRIGHT_TEXTMESSAGE_BROADCAST     = 0x00000010,
        USERRIGHT_KICK_USERS                = 0x00000020,
        USERRIGHT_BAN_USERS                 = 0x00000040,
        USERRIGHT_MOVE_USERS                = 0x00000080,
        USERRIGHT_OPERATOR_ENABLE           = 0x00000100,
        USERRIGHT_UPLOAD_FILES              = 0x00000200,
        USERRIGHT_DOWNLOAD_FILES            = 0x00000400,
        USERRIGHT_UPDATE_SERVERPROPERTIES   = 0x00000800,
        USERRIGHT_TRANSMIT_VOICE            = 0x00001000, 
        USERRIGHT_TRANSMIT_VIDEOCAPTURE     = 0x00002000,
        USERRIGHT_TRANSMIT_DESKTOP          = 0x00004000,
        USERRIGHT_TRANSMIT_DESKTOPINPUT     = 0x00008000,
        USERRIGHT_TRANSMIT_MEDIAFILE_AUDIO  = 0x00010000,
        USERRIGHT_TRANSMIT_MEDIAFILE_VIDEO  = 0x00020000,
        USERRIGHT_TRANSMIT_MEDIAFILE = USERRIGHT_TRANSMIT_MEDIAFILE_VIDEO | USERRIGHT_TRANSMIT_MEDIAFILE_AUDIO,
        USERRIGHT_LOCKED_NICKNAME           = 0x00040000,
        USERRIGHT_LOCKED_STATUS             = 0x00080000,
        USERRIGHT_RECORD_VOICE              = 0x00100000,
    } UserRight;
    typedef UINT32 UserRights;
    typedef struct ServerProperties
    {
        TTCHAR szServerName[TT_STRLEN];
        TTCHAR szMOTD[TT_STRLEN];
        TTCHAR szMOTDRaw[TT_STRLEN];
        INT32 nMaxUsers;
        INT32 nMaxLoginAttempts;
        INT32 nMaxLoginsPerIPAddress;
        INT32 nMaxVoiceTxPerSecond;
        INT32 nMaxVideoCaptureTxPerSecond;
        INT32 nMaxMediaFileTxPerSecond;
        INT32 nMaxDesktopTxPerSecond;
        INT32 nMaxTotalTxPerSecond;
        TTBOOL bAutoSave;
        INT32 nTcpPort;
        INT32 nUdpPort;
        INT32 nUserTimeout;
        TTCHAR szServerVersion[TT_STRLEN];
        TTCHAR szServerProtocolVersion[TT_STRLEN];
        INT32 nLoginDelayMSec;
        TTCHAR szAccessToken[TT_STRLEN];
    } ServerProperties;
    typedef UINT32 BanTypes;
    typedef struct BannedUser
    {
        TTCHAR szIPAddress[TT_STRLEN]; 
        TTCHAR szChannelPath[TT_STRLEN]; 
        TTCHAR szBanTime[TT_STRLEN];
        TTCHAR szNickname[TT_STRLEN];
        TTCHAR szUsername[TT_STRLEN];
        BanTypes uBanTypes;
    } BannedUser;
    typedef enum UserType
    {
        USERTYPE_NONE    = 0x0, 
        USERTYPE_DEFAULT = 0x01, 
        USERTYPE_ADMIN   = 0x02 
    } UserType;
    typedef UINT32 UserTypes;
    typedef struct AbusePrevention
    {
        INT32 nCommandsLimit;
        INT32 nCommandsIntervalMSec;
    } AbusePrevention;
    typedef struct UserAccount
    {
        TTCHAR szUsername[TT_STRLEN];
        TTCHAR szPassword[TT_STRLEN];
        UserTypes uUserType;
        UserRights uUserRights;
        INT32 nUserData;
        TTCHAR szNote[TT_STRLEN];
        TTCHAR szInitChannel[TT_STRLEN];
        INT32 autoOperatorChannels[TT_CHANNELS_OPERATOR_MAX];
        INT32 nAudioCodecBpsLimit;
        AbusePrevention abusePrevent;
    } UserAccount;
    typedef UINT32 Subscriptions;
    typedef UINT32 UserStates;
    typedef struct User
    {
        INT32 nUserID;
        TTCHAR szUsername[TT_STRLEN];
        INT32 nUserData;
        UserTypes uUserType;
        TTCHAR szIPAddress[TT_STRLEN];
        UINT32 uVersion;
        INT32 nChannelID; 
        Subscriptions uLocalSubscriptions;
        Subscriptions uPeerSubscriptions;
        TTCHAR szNickname[TT_STRLEN];
        INT32 nStatusMode;
        TTCHAR szStatusMsg[TT_STRLEN];
        UserStates uUserState;
        TTCHAR szMediaStorageDir[TT_STRLEN];
        INT32 nVolumeVoice;
        INT32 nVolumeMediaFile;
        INT32 nStoppedDelayVoice;
        INT32 nStoppedDelayMediaFile;
        float soundPositionVoice[3];
        float soundPositionMediaFile[3];
        TTBOOL stereoPlaybackVoice[2];
        TTBOOL stereoPlaybackMediaFile[2];
        INT32 nBufferMSecVoice;
        INT32 nBufferMSecMediaFile;
        TTCHAR szClientName[TT_STRLEN];
    } User;
    typedef struct UserStatistics
    { 
        INT64 nVoicePacketsRecv;
        INT64 nVoicePacketsLost;
        INT64 nVideoCapturePacketsRecv;
        INT64 nVideoCaptureFramesRecv;
        INT64 nVideoCaptureFramesLost;
        INT64 nVideoCaptureFramesDropped;
        INT64 nMediaFileAudioPacketsRecv;
        INT64 nMediaFileAudioPacketsLost;
        INT64 nMediaFileVideoPacketsRecv;
        INT64 nMediaFileVideoFramesRecv;
        INT64 nMediaFileVideoFramesLost;
        INT64 nMediaFileVideoFramesDropped;
    } UserStatistics;
    typedef enum TextMsgType
    {
        MSGTYPE_USER      = 1,
        MSGTYPE_CHANNEL   = 2,
        MSGTYPE_BROADCAST = 3,
        MSGTYPE_CUSTOM    = 4
    } TextMsgType;
    typedef struct TextMessage
    {
        TextMsgType nMsgType;
        INT32 nFromUserID;
        TTCHAR szFromUsername[TT_STRLEN];
        INT32 nToUserID;
        INT32 nChannelID;
        TTCHAR szMessage[TT_STRLEN];
    } TextMessage;
    typedef UINT32 ChannelTypes;
    typedef struct Channel
    {
        INT32 nParentID;
        INT32 nChannelID;
        TTCHAR szName[TT_STRLEN];
        TTCHAR szTopic[TT_STRLEN];
        TTCHAR szPassword[TT_STRLEN];
        TTBOOL bPassword;
        ChannelTypes uChannelType;
        INT32 nUserData;
        INT64 nDiskQuota;
        TTCHAR szOpPassword[TT_STRLEN];
        INT32 nMaxUsers;
        AudioCodec audiocodec;
        AudioConfig audiocfg;
        INT32 transmitUsers[TT_TRANSMITUSERS_MAX][2];
        INT32 transmitUsersQueue[TT_TRANSMITQUEUE_MAX];
    } Channel;
    typedef struct RemoteFile
    {
        INT32 nChannelID;
        INT32 nFileID;
        TTCHAR szFileName[TT_STRLEN];
        INT64 nFileSize;
        TTCHAR szUsername[TT_STRLEN];
    } RemoteFile;
    typedef VOID TTInstance;
    TEAMTALKDLL_API INT32 TT_DoBanIPAddress(IN TTInstance* lpTTInstance,
                                            IN const TTCHAR* szIPAddress,
                                            IN INT32 nChannelID);
    TEAMTALKDLL_API INT32 TT_DoUnBanUser(IN TTInstance* lpTTInstance,
                                         IN const TTCHAR* szIPAddress,
                                         IN INT32 nChannelID);
    TEAMTALKDLL_API INT32 TT_DoUnBanUserEx(IN TTInstance* lpTTInstance,
                                           IN const BannedUser* lpBannedUser);
    TEAMTALKDLL_API INT32 TT_DoListBans(IN TTInstance* lpTTInstance,
                                        IN INT32 nChannelID,
                                        IN INT32 nIndex,
                                        IN INT32 nCount);
    TEAMTALKDLL_API INT32 TT_DoSaveConfig(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API INT32 TT_DoQueryServerStats(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API INT32 TT_DoQuit(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_GetServerProperties(IN TTInstance* lpTTInstance,
                                                  OUT ServerProperties* lpServerProperties);
    TEAMTALKDLL_API TTBOOL TT_GetServerUsers(IN TTInstance* lpTTInstance,
                                             IN OUT User* lpUsers,
                                             IN OUT INT32* lpnHowMany);
    TEAMTALKDLL_API INT32 TT_GetRootChannelID(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API INT32 TT_GetMyChannelID(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_GetChannel(IN TTInstance* lpTTInstance,
                                         IN INT32 nChannelID, 
                                         OUT Channel* lpChannel );
    TEAMTALKDLL_API TTBOOL TT_GetChannelPath(IN TTInstance* lpTTInstance,
                                             IN INT32 nChannelID, 
                                             OUT TTCHAR szChannelPath[TT_STRLEN]);
    TEAMTALKDLL_API INT32 TT_GetChannelIDFromPath(IN TTInstance* lpTTInstance,
                                                  IN const TTCHAR* szChannelPath);
    TEAMTALKDLL_API TTBOOL TT_GetChannelUsers(IN TTInstance* lpTTInstance,
                                            IN INT32 nChannelID,
                                            IN OUT User* lpUsers,
                                            IN OUT INT32* lpnHowMany);
    TEAMTALKDLL_API TTBOOL TT_GetChannelFiles(IN TTInstance* lpTTInstance,
                                              IN INT32 nChannelID, 
                                              IN OUT RemoteFile* lpRemoteFiles,
                                              IN OUT INT32* lpnHowMany);
    TEAMTALKDLL_API TTBOOL TT_GetChannelFile(IN TTInstance* lpTTInstance,
                                             IN INT32 nChannelID, 
                                             IN INT32 nFileID, 
                                             OUT RemoteFile* lpRemoteFile);
    TEAMTALKDLL_API TTBOOL TT_IsChannelOperator(IN TTInstance* lpTTInstance,
                                                IN INT32 nUserID, 
                                                IN INT32 nChannelID);
    TEAMTALKDLL_API TTBOOL TT_GetServerChannels(IN TTInstance* lpTTInstance,
                                                IN OUT Channel* lpChannels,
                                                IN OUT INT32* lpnHowMany);
    TEAMTALKDLL_API INT32 TT_GetMyUserID(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_GetMyUserAccount(IN TTInstance* lpTTInstance,
                                               OUT UserAccount* lpUserAccount);
    TEAMTALKDLL_API UserTypes TT_GetMyUserType(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API UserRights TT_GetMyUserRights(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API INT32 TT_GetMyUserData(IN TTInstance* lpTTInstance);
    TEAMTALKDLL_API TTBOOL TT_GetUser(IN TTInstance* lpTTInstance,
                                      IN INT32 nUserID, OUT User* lpUser);
    TEAMTALKDLL_API TTBOOL TT_GetUserStatistics(IN TTInstance* lpTTInstance,
                                                IN INT32 nUserID, 
                                                OUT UserStatistics* lpUserStatistics);
    TEAMTALKDLL_API TTBOOL TT_GetUserByUsername(IN TTInstance* lpTTInstance,
                                                IN const TTCHAR* szUsername, 
                                                OUT User* lpUser);
    TEAMTALKDLL_API TTBOOL TT_SetUserVolume(IN TTInstance* lpTTInstance,
                                            IN INT32 nUserID, 
                                            IN StreamType nStreamType,
                                            IN INT32 nVolume);
    TEAMTALKDLL_API TTBOOL TT_SetUserMute(IN TTInstance* lpTTInstance,
                                          IN INT32 nUserID,
                                          IN StreamType nStreamType,
                                          IN TTBOOL bMute);
    TEAMTALKDLL_API TTBOOL TT_SetUserStoppedPlaybackDelay(IN TTInstance* lpTTInstance,
                                                          IN INT32 nUserID, 
                                                          IN StreamType nStreamType,
                                                          IN INT32 nDelayMSec);